# SimpleStackVM

./: .gitignore  ByteCodeParse.c  ByteCodeParse.h  CMakeLists.txt  CMakePresets.json  MiniStackVM.h  MiniStackVMImpl.c  OpCode.c  OpCodes.h  OperationStack.h  OperationStackImpl.c  StorageStack.h  StorageStackImpl.c  String.c  String.h  StringReader.c  StringReader.h  main.c  test.c
